# ctransform_cuda

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block_source_writes.sh
.claude/rules/: cuda_cpp.md  documentation.md  math_ctransform.md  python_extension.md
docs/: index.md  project_brief.md
docs/engineering/: api.md  cuda_cpp_architecture.md  development.md  jax_ffi_integration.md  memory_layout.md  python_extention_plan.md  separable_kernel_spec.md  test_strategy.md  todo.md
docs/math/: cost_functions.md  ctransform_overview.md  dual_potentials.md  hopf_lax_hj.md  moreau_proximal.md  numerical_stability.md  separable_ctransform.md
include/: ctransform.hpp  cuda_utils.cuh  print_utils.hpp
python/ctransform_cuda/: jax.py
python/src/: bindings.cpp  ffi_handlers.cpp
python/tests/: conftest.py  test_bindings.py  test_jax_ffi.py
src/: cpu_reference.cpp  ctransform1D_naive.cu  ctransform2D_naive.cu  ctransform2D_separable.cu  ctransform2d_naive.cu  ctransform_naive.cu  ctransform_naive_demo.cpp
tests/: test_cpu_reference.cpp  test_ctransform_1d.cpp  test_cuda_vs_cpu.cpp  test_launch_layer.cu  test_perf.cpp  test_randomized.cpp  test_stress.cpp
